styling fonts format

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,110 @@
+/* Weather Icons - Conditions */
+@font-face {
+    font-family: artilweathericons;
+    src: url(../assets/fonts/artilweathericons.ttf);
+    ;
+}
+
+.weatherIconFont {
+    font-family: artilweathericons;
+    font-size: 7rem;
+}
+
+/* Font Families */
+@font-face {
+    font-family: elmessiri-bold;
+    src: url(../assets/fonts/elmessiri-bold.otf);
+}
+
+@font-face {
+    font-family: elmessiri-regular;
+    src: url(../assets/fonts/elmessiri-regular.otf);
+}
+
+@font-face {
+    font-family: Roboto-Regular;
+    src: url(../assets/fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Light;
+    src: url(../assets/fonts/Roboto-Light.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Thin;
+    src: url(../assets/fonts/Roboto-Thin.ttf);
+}
+
+/* All */
+
 body {
     background: rgb(174, 163, 255);
     background: linear-gradient(90deg, rgba(174, 163, 255, 1) 36%, rgba(103, 113, 255, 1) 56%);
 }
 
-h1 {
-    font-size: 1.7rem;
+/* Navbar */
+.bgWhite {
+    background-color: #FFFFFF;
+}
+
+.navTitle {
+    color: #707070;
+    font-family: elmessiri-bold;
+    font-size: 2.2rem;
+}
+
+.searchBox {
+    width: 320px;
+    height: 48px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 10px 5px #F1F1F1;
+}
+
+.searchBtn {
+    border-radius: 15px;
+    background-color: #BDB8F8;
+}
+
+/* Body */
+.borderRadius {
+    border-radius: 15px;
+}
+
+.RobotoLightFont {
+    font-family: 'Roboto-Light';
+}
+
+.headerText {
+    letter-spacing: 3px;
+    font-size: 28px;
+}
+
+.headerText2 {
+    letter-spacing: 3px;
+    font-size: 23px;
+}
+
+.tempText {
+    font-family: 'elmessiri-regular';
+    font-size: 120px;
+}
+
+.belowCityText {
+    font-family: 'elmessiri-regular';
+    font-size: 25px;
+}
+
+.RobotoRegularFont {
+    font-family: 'Roboto-Regular';
+}
+
+.timesText {
+    font-family: 'Roboto-Thin';
+    font-size: 22px;
+}
+
+.todaysTempsHour {
+    font-family: 'elmessiri-regular';
+    font-size: 55px;
 }
